# artificial_friend

./: Cargo.toml  Dockerfile  README.md  run.sh
src/: dialog_handler.rs  dialog_message.rs  dialog_state.rs  main.rs  openai_client.rs
