[package]
name = "artificial_friend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.11.16", features = ["json"] }
serde_json = "1.0.96"
teloxide = { version = "0.12", features = ["full"] }
tokio = { version =  "1.27.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
